--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -274,7 +274,13 @@
             </nav>
         </div>
         <div id="content" class="main-content p-4">
-            @RenderBody();
+            <card class="card">
+                <div class="card-body">
+                    @RenderBody();
+                </div>
+         
+            </card>
+         
             <div class="footer-wrapper fixed-bottom">
                 <div class="footer-section f-section-1">
                     <p class="">Copyright © 2021 <a target="_blank" href="http://demo5.afluex.com/">MY TRADE</a></p>
