--- a/MyTrade/Views/User/BankDetailsUpdate.cshtml
+++ b/MyTrade/Views/User/BankDetailsUpdate.cshtml
@@ -14,7 +14,7 @@
                     <div class="widget-header">
                         <div class="row">
                             <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                <h4>Bank Details Update</h4>
+                                <h4>Update KYC </h4>
                                 <span class="text-danger">
                                     @TempData["msg"]
                                 </span>
