--- a/MyTrade/Views/Shared/_UserLayout.cshtml
+++ b/MyTrade/Views/Shared/_UserLayout.cshtml
@@ -22,20 +22,46 @@
     <link rel="stylesheet" type="text/css" href="~/plugins/table/datatable/custom_dt_html5.css">
     <link rel="stylesheet" type="text/css" href="~/plugins/table/datatable/dt-global_style.css">
     <link href="~/assets/css/scrollspyNav.css" rel="stylesheet" type="text/css" />
-   
+
     <style>
         .errortext {
             border: 2px solid red !important;
             background-color: #ffd3c6 !important;
         }
+
         .alert.alert-icon-right.alert-light-red.navbar-nav.flex-row.ml-auto.mr-4 {
             padding: 5px;
             margin-bottom: 0px;
-       }
-        .alert.alert-icon-right.alert-light-red.navbar-nav.flex-row.ml-auto.mr-4.alert-icon-right svg:not(.close) {
-            width: 2rem;
-            right: -2.8rem;
-            top: 45%;
+        }
+
+            .alert.alert-icon-right.alert-light-red.navbar-nav.flex-row.ml-auto.mr-4.alert-icon-right svg:not(.close) {
+                width: 2rem;
+                right: -2.8rem;
+                top: 45%;
+            }
+
+        .alert-light-red {
+            color: #ff0000;
+            background-color: #efe5e5;
+            border-color: #ff0000;
+        }
+
+        @@media (max-width: 991px) {
+            .alert-icon-right {
+                border-right: 45px solid;
+            }
+        }
+
+        a.sidebarCollapse {
+            color: white;
+            padding-left: 100px;
+        }
+
+        @@media (max-width: 991px) {
+            a.sidebarCollapse {
+                color: white;
+                padding-left: 33px;
+            }
         }
     </style>
     <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
@@ -55,25 +81,26 @@
         <header class="header navbar navbar-expand-sm">
             <ul class="navbar-item theme-brand flex-row  text-center">
                 <li class="nav-item theme-logo">
-                    <a href="/user/UserDashboard">
-                        <img src="~/assets/img/Trade1.png" class="navbar-logo" alt="logo" style="width:182px;" />
 
+                    <a href="/user/UserDashboard">
+                        <img src="~/MyTradeWebsite/assets/img/logo.png" class="navbar-logo" alt="logo" />
                     </a>
+                    <a href="javascript:void(0);" class="sidebarCollapse" data-placement="bottom"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg></a>
                 </li>
                 @*<li class="nav-item theme-text">
-                    <a href="/User/UserDashboard" class="nav-link">MY TRADE</a>
-                </li>*@
+                        <a href="/User/UserDashboard" class="nav-link">MY TRADE</a>
+                    </li>*@
             </ul>
             @*<ul class="navbar-item flex-row ml-md-0 ml-auto">
-                <li class="nav-item align-self-center search-animated">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search toggle-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
-                    <form class="form-inline search-full form-inline search" role="search">
-                        <div class="search-bar">
-                            <input type="text" class="form-control search-form-control  ml-lg-auto" placeholder="Search...">
-                        </div>
-                    </form>
-                </li>
-            </ul>*@
+                    <li class="nav-item align-self-center search-animated">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search toggle-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>
+                        <form class="form-inline search-full form-inline search" role="search">
+                            <div class="search-bar">
+                                <input type="text" class="form-control search-form-control  ml-lg-auto" placeholder="Search...">
+                            </div>
+                        </form>
+                    </li>
+                </ul>*@
             <ul class="navbar-item flex-row ml-md-auto">
                 <li class="nav-item dropdown user-profile-dropdown d-none d-sm-block">
                     @if (Session["Gender"] != null)
@@ -88,7 +115,7 @@
                             <h6 style="color:white;margin-top:10px">Hello Mr. @Session["FullName"] (@Session["LoginId"])</h6>
                         }
                     }
-                 
+
                 </li>
                 <li class="nav-item dropdown user-profile-dropdown">
                     <a href="javascript:void(0);" class="nav-link dropdown-toggle user" id="userProfileDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -104,8 +131,21 @@
                     <div class="dropdown-menu position-absolute" aria-labelledby="userProfileDropdown">
                         <div class="">
                             <div class="dropdown-item">
+                                <a class="" href="/User/ViewProfile"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>  Profile</a>
+                            </div>
+                            <div class="dropdown-item">
+                                <a class="" href="/User/BankDetailsUpdate"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg> KYC Details</a>
+                            </div>
+                            <div class="dropdown-item">
+                                <a class="" href="/User/ChangePasswordForUser"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-key"><path d="M21 2l-2 2m-7.61 7.61a5.5 5.5 0 1 1-7.778 7.778 5.5 5.5 0 0 1 7.777-7.777zm0 0L15.5 7.5m0 0l3 3L22 7l-3-3m-3.5 3.5L19 4"></path></svg> Change Password</a>
+                            </div>
+                            <div class="dropdown-item">
+                                <a href="javascript:void(0)" data-toggle="modal" data-target="#exampleModal"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-share-2"><circle cx="18" cy="5" r="3"></circle><circle cx="6" cy="12" r="3"></circle><circle cx="18" cy="19" r="3"></circle><line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line><line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line></svg>Share Link</a>
+                            </div>
+                            <div class="dropdown-item">
                                 <a class="" href="/Home/Login"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg> Sign Out</a>
                             </div>
+
                         </div>
                     </div>
                 </li>
@@ -115,22 +155,22 @@
     </div>
     <!--  END NAVBAR  -->
     <!--  BEGIN NAVBAR  -->
-    <div class="sub-header-container">
-        <header class="header navbar navbar-expand-sm">
-            <a href="javascript:void(0);" class="sidebarCollapse" data-placement="bottom"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg></a>
-            
-            <div class="alert alert-icon-right alert-light-red navbar-nav flex-row ml-auto mr-4" role="alert">
+    @*<div class="sub-header-container">
+            <header class="header navbar navbar-expand-sm">
 
-                <strong><a target="_blank" style="font-size: 14px;color:red;word-wrap:break-word" href="http://mytrade.co.in//Home/Registration?Pid=@Session["Pk_UserId"].ToString()">http://mytrade.co.in//Home/Registration?Pid=@Session["Pk_UserId"].ToString()</a></strong>
 
-                <a href="javascript:void(0)" data-toggle="modal" data-target="#exampleModal"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-share-2"><circle cx="18" cy="5" r="3"></circle><circle cx="6" cy="12" r="3"></circle><circle cx="18" cy="19" r="3"></circle><line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line><line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line></svg></a>
+                <div class="alert alert-icon-right alert-light-red navbar-nav flex-row ml-auto mr-4" role="alert">
 
-                
+                    <strong><a target="_blank" style="font-size: 14px;color:red;word-wrap:break-word" href="http://mytrade.co.in//Home/Registration?Pid=@Session["Pk_UserId"].ToString()">http://mytrade.co.in//Home/Registration?Pid=@Session["Pk_UserId"].ToString()</a></strong>
 
-            </div>
+                    <a href="javascript:void(0)" data-toggle="modal" data-target="#exampleModal"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-share-2"><circle cx="18" cy="5" r="3"></circle><circle cx="6" cy="12" r="3"></circle><circle cx="18" cy="19" r="3"></circle><line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line><line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line></svg></a>
 
-        </header>
-    </div>
+
+
+                </div>
+
+            </header>
+        </div>*@
     <!--  END NAVBAR  -->
     <!--  BEGIN MAIN CONTAINER  -->
     <div class="main-container" id="container">
@@ -178,11 +218,11 @@
                         </a>
                         <ul class="collapse submenu list-unstyled" id="Team" data-parent="#accordionExample">
                             @*<li>
-                                <a href="/user/BinaryTree">Binary Tree</a>
-                            </li>*@
+                                    <a href="/user/BinaryTree">Binary Tree</a>
+                                </li>*@
                             @*<li>
-                                <a href="/Downline/DownLineList">Downline</a>
-                            </li>*@
+                                    <a href="/Downline/DownLineList">Downline</a>
+                                </li>*@
                             <li>
                                 <a href="/Downline/DirectList">Direct</a>
                             </li>
@@ -194,7 +234,7 @@
                             </li>
                         </ul>
                     </li>
-                    
+
                     <li class="menu">
                         <a href="#Pin" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                             <div class="">
@@ -206,7 +246,7 @@
                             </div>
                         </a>
                         <ul class="collapse submenu list-unstyled" id="Pin" data-parent="#accordionExample">
-                     
+
                             <li>
                                 <a href="/User/PinList">Pin List</a>
                             </li>
@@ -215,29 +255,29 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="menu">
-                        <a href="#Setting" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                            <div class="">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
-                                <span>Setting</span>
-                            </div>
-                            <div>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
-                            </div>
-                        </a>
-                        <ul class="collapse submenu list-unstyled" id="Setting" data-parent="#accordionExample">
+                    @*<li class="menu">
+                            <a href="#Setting" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                                <div class="">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+                                    <span>Setting</span>
+                                </div>
+                                <div>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
+                                </div>
+                            </a>
+                            <ul class="collapse submenu list-unstyled" id="Setting" data-parent="#accordionExample">
 
-                            <li>
-                                <a href="/User/ViewProfile">View Profile</a>
-                            </li>
-                            <li>
-                                <a href="/User/BankDetailsUpdate">Bank Details</a>
-                            </li>
-                            <li>
-                                <a href="/User/ChangePasswordForUser">Change Password</a>
-                            </li>
-                        </ul>
-                    </li>
+                                <li>
+                                    <a href="/User/ViewProfile">View Profile</a>
+                                </li>
+                                <li>
+                                    <a href="/User/BankDetailsUpdate">Bank Details</a>
+                                </li>
+                                <li>
+                                    <a href="/User/ChangePasswordForUser">Change Password</a>
+                                </li>
+                            </ul>
+                        </li>*@
                     @*<li class="menu">
                             <a href="#app" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                                 <div class="">
@@ -295,10 +335,10 @@
         <div id="content" class="main-content p-1">
             @*<div class="card">
                 <div class="card-body">*@
-                    @RenderBody();
-                @*</div>
-            </div>*@
-         
+            @RenderBody();
+            @*</div>
+                </div>*@
+
             <div class="footer-wrapper fixed-bottom">
                 <div class="footer-section f-section-1">
                     <p class="">Copyright © 2021 <a target="_blank" href="http://demo5.afluex.com/">MY TRADE</a></p>
@@ -332,7 +372,7 @@
     <script src="~/plugins/table/datatable/button-ext/buttons.html5.min.js"></script>
     <script src="~/plugins/table/datatable/button-ext/buttons.print.min.js"></script>
     <script>
-        $('#html5-extension').DataTable( {
+        $('#html5-extension').DataTable({
             "dom": "<'dt--top-section'<'row'<'col-sm-12 col-md-6 d-flex justify-content-md-start justify-content-center'B><'col-sm-12 col-md-6 d-flex justify-content-md-end justify-content-center mt-md-0 mt-3'f>>>" +
         "<'table-responsive'tr>" +
         "<'dt--bottom-section d-sm-flex justify-content-sm-between text-center'<'dt--pages-count  mb-sm-0 mb-3'i><'dt--pagination'p>>",
@@ -349,14 +389,14 @@
                 "sInfo": "Showing page _PAGE_ of _PAGES_",
                 "sSearch": '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search"><circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line></svg>',
                 "sSearchPlaceholder": "Search...",
-               "sLengthMenu": "Results :  _MENU_",
+                "sLengthMenu": "Results :  _MENU_",
             },
             "stripeClasses": [],
             "lengthMenu": [7, 10, 20, 50],
             "pageLength": 7
-        } );
+        });
     </script>
- 
+
 
     <!-- BEGIN PAGE LEVEL PLUGINS/CUSTOM SCRIPTS -->
 </body>
