--- a/MyTrade/Views/User/Tree.cshtml
+++ b/MyTrade/Views/User/Tree.cshtml
@@ -14,7 +14,7 @@
                     <div class="row">
                         <div class="col-md-12 col-lg-12 col-sm-12 my-4"  style="display:flex; justify-content:center;">
                             <!-- HTML5 Export Buttons table start -->
-                            <card class="card" style="width: 500px; background-color: #fdd5d5b0;">
+                            <card class="card" style="width: 500px;">
                                 <div class="card-header text-center">
                                     <h3 style="color: #22396c;">Level Tree</h3>
                                 </div>
