--- a/MyTrade/assets/css/structure.css
+++ b/MyTrade/assets/css/structure.css
@@ -78,11 +78,11 @@ code { color: #e7515a; }
     position: relative;
     width: 50%;
     flex-grow: 8;
-    margin-top: 106px;
+    margin-top: 60px;
     margin-bottom: 0;
     margin-left: 212px;
     transition: .600s;
-    background-color: #dbdbdb73;
+    background-color: white;
 }
 .main-container-fluid > .main-content > .container {
     float: left;
@@ -177,7 +177,7 @@ code { color: #e7515a; }
 }
 .navbar {
     padding: 0;
-    background: #22396c;
+    background:#22396c;
 }
 .navbar .theme-brand {
     padding: 0.9px 0 0.9px 27px!important;
@@ -186,8 +186,10 @@ code { color: #e7515a; }
 }
 .navbar .theme-brand li.theme-logo { align-self: center; }
 .navbar .theme-brand li.theme-logo img {
-    width: 34px;
-    height: 34px;
+    width: 70px;
+    height: 50px;
+    background:white;
+    border-radius:7px;
 }
 .navbar .theme-brand li.theme-text {
     margin-right: 47px;
@@ -836,7 +838,7 @@ code { color: #e7515a; }
     user-select: none;
     -webkit-user-drag: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    top: 106px;
+    top: 60px;
     left: 16px;
 }
 .sidebar-theme { background: transparent; }
@@ -1087,11 +1089,11 @@ code { color: #e7515a; }
 .footer-wrapper {
     padding: 10px 20px 10px 18px;
     display: inline-block;
-    background: #eff0f2;
+    background: #22396c;
     font-weight: 600;
     font-size: 12px;
     width: 100%;
-    border-top-left-radius: 6px;
+    /*border-top-left-radius: 6px;*/
     display: flex;
    justify-content: space-evenly;
     align-items: flex-end;
@@ -1101,12 +1103,12 @@ code { color: #e7515a; }
 }
 .footer-wrapper .footer-section p {
     margin-bottom: 0;
-    color: #515365;
+    color: white;
     font-size: 13px;
     letter-spacing: 1px;
 }
 .footer-wrapper .footer-section p a {
-    color: #515365;
+    color: white;
 }
 .footer-wrapper .footer-section svg {
     color: #e7515a;
