--- a/MyTrade/Views/User/Tree.cshtml
+++ b/MyTrade/Views/User/Tree.cshtml
@@ -4,30 +4,164 @@
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
 <style>
- 
+    .level-img {
+        width: 100px;
+        height: 100px;
+        background: #808080;
+        border-radius: 50%;
+    }
+
+    .level-th {
+        padding: 0;
+        letter-spacing: 0;
+        white-space: normal;
+    }
 </style>
+<link href="~/assets/css/tables/table-basic.css" rel="stylesheet" type="text/css" />
+<link href="~/assets/css/users/user-profile.css" rel="stylesheet" type="text/css" />
+<link href="~/assets/css/structure.css" rel="stylesheet" />
 <div class="container-fluid">
-    <div class="row layout-top-spacing">
-        <div class="col-lg-12 col-12 layout-spacing">
-            <div class="statbox widget box box-shadow">
-                <div class="widget-header">
+    <div class="row layout-top-spacing" style="justify-content:center">
+        <div class="col-xl-12 col-lg-12 col-md-5 col-sm-12 layout-top-spacing">
+            <div class="user-profile layout-spacing">
+                <div class="widget-content widget-content-area">
                     <div class="row">
-                        <div class="col-md-12 col-lg-12 col-sm-12 my-4"  style="display:flex; justify-content:center;">
-                            <!-- HTML5 Export Buttons table start -->
-                            <card class="card" style="width: 500px;">
-                                <div class="card-header text-center">
-                                    <h3 style="color: #22396c;">Level Tree</h3>
+                        <div class="col-lg-4">
+                            @*<div class="d-flex justify-content-between">
+                                    <h3 class="">Level Tree</h3>
+                                    <a href="javascript:void(0)" style="height:35px;margin-top:5px"></a>
+                                </div>*@
+                            <div class="text-center user-info">
+                                @if (Model.ProfilePic != "")
+                                {
+                                    <img src="@Model.ProfilePic" alt="avatar" height="100" width="100">
+                                }
+                                else
+                                {
+                                    <img src="~/assets/img/usericon.jpg" alt="avatar" height="100" width="100">
+                                }
+                                <p class="">@Model.DisplayName (@Model.LoginId)</p>
+                                @Html.HiddenFor(m => m.PK_UserId)
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="user-info-list">
+                                <div class="">
+                                    <ul class="contacts-block list-unstyled">
+                                        <li class="contacts-block__item">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>Member At Level: @ViewBag.Level
+                                        </li>
+                                        <li class="contacts-block__item">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>Self BV : 0
+                                        </li>
+                                        <li class="contacts-block__item">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-dollar-sign"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>Team BV : 0
+                                        </li>
+                                    </ul>
                                 </div>
-                                <div class="card-body">
-                                    <iframe id="frm" src="~/LevelTree.aspx" style="height:500px;border: 0px solid;width:100%"></iframe>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="user-info-list">
+                                <div class="">
+                                    <ul class="contacts-block list-unstyled">
+                                        <li class="contacts-block__item">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>Total Direct: @Model.TotalDirect
+                                        </li>
+                                        <li class="contacts-block__item">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>Total Active : @Model.TotalActive
+                                        </li>
+                                        <li class="contacts-block__item">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>Total In-Active : @Model.TotalInactive
+                                        </li>
+                                    </ul>
                                 </div>
-                            </card>
+                            </div>
                         </div>
                     </div>
                 </div>
-                
             </div>
+        </div>
+
+        @*<div class="col-lg-12 col-12 layout-spacing">
+                <div class="statbox widget box box-shadow">
+                    <div class="widget-header">
+                        <div class="row">
+                            <div class="col-md-12 col-lg-12 col-sm-12 my-4" style="display:flex; justify-content:center;">
+                                <!-- HTML5 Export Buttons table start -->
+                                <card class="card" style="width: 500px;">
+                                    <div class="card-header text-center">
+                                        <h3 style="color: #22396c;">Level Tree</h3>
+                                    </div>
+                                    <div class="card-body">
+                                        <iframe id="frm" src="~/LevelTree.aspx" style="height:500px;border: 0px solid;width:100%"></iframe>
+                                    </div>
+                                </card>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>*@
+    </div>
+    <div class="row layout-top-spacing">
+
+        <div id="tableCaption" class="col-lg-3 col-12 layout-spacing">
+            <div class="statbox widget box box-shadow">
+
+                <div class="widget-content widget-content-area">
+                    <div class="table-responsive">
+                        <table class="table mb-4">
+                            <thead>
+                                <tr>
+                                    <th class="text-center level-th" style="white-space:normal">Member(S) At Level</th>
+                                    <th class="text-center level-th" style="white-space:normal">Total Associate</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lst != null)
+                                    {
+                                        foreach (var item in Model.lst)
+                                        {
+                                            <tr>
+                                                <td class="text-center">@item.LevelName</td>
+                                                <td class=""><span class="shadow-none badge outline-badge-primary" onclick="return GetTreeMembers(@item.LevelName);">Total-@item.NumberOfMembers</span></td>
+                                            </tr>
+                                        }
+                                    }
+                                }
+
+                            </tbody>
+                        </table>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-9 col-12 layout-spacing">
+            <div class="row" id="divMember"></div>
         </div>
     </div>
 </div>
 
+<script>
+    function GetTreeMembers(Level) {
+        $.ajax({
+            url: "/User/GetTreeMembers",
+            Type: "Get",
+            DataType: 'JSON',
+            data: { Level: Level, PK_UserId: $("#PK_UserId").val() },
+            success: function (data) {
+                if (data != null) {
+                    $("#divMember").html('');
+                    if (data.lstMember != null) {
+                        for (var i = 0; i < data.lstMember.length; i++) {
+                            $("#divMember").append('<div id="card_1" class="col-lg-3 layout-spacing"><div class="statbox widget box box-shadow"><div class="widget-content widget-content-area"><div class="icon-svg"><center><a href="/User/Tree?LoginId=' + data.lstMember[i].LoginId + '"><img class="level-img" src="' + data.lstMember[i].ProfilePic + '" height="50" width="50" /></a></center></div><p class="text-center">' + data.lstMember[i].MemberName + '</p><p class="text-center">(' + data.lstMember[i].LoginId + ')</p><p class="text-center">Member(S) at Level : ' + data.lstMember[i].Level + '</p><p class="text-center">Self BV : ' + data.lstMember[i].SelfBV + '</p><p class="text-center">Team BV : ' + data.lstMember[i].TeamBV + '</p></div></div></div>')
+                        }
+                    }
+                }
+            }
+        })
+    }
+</script>
