--- a/MyTrade/assets/css/structure.css
+++ b/MyTrade/assets/css/structure.css
@@ -177,7 +177,8 @@ code { color: #e7515a; }
 }
 .navbar {
     padding: 0;
-    background:#22396c;
+    background-image: #22396c;
+    background-image: linear-gradient(90deg, #22396c, #910f10);
 }
 .navbar .theme-brand {
     padding: 0.9px 0 0.9px 27px!important;
@@ -828,7 +829,7 @@ code { color: #e7515a; }
 ===============
 */
 .sidebar-wrapper {
-    width: 212px;
+    width: 227px;
     position: fixed;
     z-index: 1028;
     border-radius: 6px 6px 0 0;
@@ -839,9 +840,9 @@ code { color: #e7515a; }
     -webkit-user-drag: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     top: 60px;
-    left: 16px;
+    left: 0px;
 }
-.sidebar-theme { background: transparent; }
+.sidebar-theme { background-image: linear-gradient(180deg, #22396c, #8d2d5a, #910f10);}
 .sidebar-closed.main-container { padding: 0; }
 .sidebar-closed > .sidebar-wrapper { left: -270px; }
 .sidebar-closed > #content { margin-left: 0; }
@@ -918,7 +919,7 @@ code { color: #e7515a; }
     justify-content: space-between;
     cursor: pointer;
     font-size: 13px;
-    color: #0e1726;
+    color: #ffffff;
     padding: 11px 14px;
     transition: .600s;
     margin-bottom: 4px;
@@ -928,7 +929,7 @@ code { color: #e7515a; }
 #sidebar ul.menu-categories li.menu > .dropdown-toggle > div { align-self: center; }
 #sidebar ul.menu-categories li.menu .dropdown-toggle:after { display: none; }
 #sidebar ul.menu-categories li.menu > .dropdown-toggle svg {
-    color: #506690;
+    color: #ffffff;
     margin-right: 10px;
     vertical-align: middle;
     width: 20px;
@@ -955,6 +956,7 @@ code { color: #e7515a; }
     background: #bfc9d4;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
     border-radius: 6px;
+    color: #000000;
 }
 #sidebar ul.menu-categories li.menu > .dropdown-toggle[aria-expanded="true"]:not([data-active="true"]) {
     background: #bfc9d4;
@@ -990,7 +992,7 @@ code { color: #e7515a; }
     padding-left: 24px;
     margin-left: 36px;
     font-size: 13px;
-    color: #515365;
+    color: #ffffff;
 }
 #sidebar ul.menu-categories li.menu ul.submenu > li a:before {
     content: '';
@@ -1014,7 +1016,9 @@ code { color: #e7515a; }
 #sidebar ul.menu-categories li.menu ul.submenu > li.active a:before { background-color: #4361ee; }
 #sidebar ul.menu-categories ul.submenu > li.active { position: relative; }
 #sidebar ul.menu-categories ul.submenu > li a:hover {
-    color: #4361ee;
+        color: #000000;
+    background: #bfc9d4;
+    border-radius: 7px;
 }
 #sidebar ul.menu-categories ul.submenu > li a:hover:before {
     background-color: #4361ee!important;
@@ -1089,7 +1093,7 @@ code { color: #e7515a; }
 .footer-wrapper {
     padding: 10px 20px 10px 18px;
     display: inline-block;
-    background: #22396c;
+    background-image: linear-gradient(90deg, #22396c, #910f10);
     font-weight: 600;
     font-size: 12px;
     width: 100%;
